--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "try-riot-with-obseriot",
   "version": "1.0.0",
   "description": "Try Riot with Obseriot",
+  "private": true,
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run watch & npm run server",
     "build": "rollup -c config/rollup.config.js"
   },
   "dependencies": {
@@ -12,21 +13,20 @@
     "riot": "^3.0.1"
   },
   "devDependencies": {
-    "express": "^4.14.0",
-    "rollup": "^0.37.0",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^6.0.0",
-    "rollup-plugin-multi-entry": "^2.0.1",
+    "rollup": "^0.36.4",
+    "rollup-plugin-buble": "^0.14.0",
+    "rollup-plugin-commonjs": "^5.0.5",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-multi-entry": "^2.0.1",
     "rollup-plugin-riot": "^1.0.0"
   },
   "license": "MIT",
-  "main": "server.js",
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@gitlab.com/aggre/try-riot-with-obseriot.git"
   },
-  "author": "",
+  "author": "aggre",
   "bugs": {
     "url": "https://gitlab.com/aggre/try-riot-with-obseriot/issues"
   },
